--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "date-fns": "^2.29.3",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "react-uuid": "^2.0.0"
   }
 }
