--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "Tim's Blog",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "server": "npm start --workspace=server",
     "client": "npm start --workspace=client",
-    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "build": "npm run build --workspace=client && npm run build --workspace=server"
   },
   "keywords": [],
   "author": "",
